syntax = "proto3";

package gRPC;

option java_multiple_files = true;
option java_package = "gRPC.proto";
option java_outer_classname = "MyProto";
option objc_class_prefix = "HLW";
import "google/protobuf/empty.proto";

// The greeting service definition.
service Servico {
  rpc delete(ChaveRequest) returns (ServerResponse) {}
  rpc select(ChaveRequest) returns (ServerResponse) {}
  rpc insert(ValorRequest) returns (ServerResponse) {}
  rpc update(ValorRequest) returns (ServerResponse) {}
    rpc getTabela(ChaveRequest) returns (TabelaResponse){}
}

message TabelaResponse{
    string tabela = 1;
}

message ChaveRequest {
  string chave = 1;
}

message ServerResponse {
  string response = 1;
}
message ValorRequest {
  string chave = 1;
  string valor = 2;
}
